Services/ingress/loadBalancer.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: netlix-svc
  spec:
    ports:
    - port: 5021
      targetPort: 80
    selector:
     app: netflix
    type: LoadBalancer
