Services/ingress/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata: 
    name: netflix-router
  spec:
    ingressClassName: ngnix
    rules:
    - host: link.raghavcorporation.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend: 
            service: 
              name: netlix-svc
              port: 
                number: 5021
